--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,3 +1,8 @@
+body {
+    margin: 0;
+    padding: 0;
+}
+
 .home {
     position: relative;
 
@@ -11,6 +16,9 @@
 
 .header {
     align-self: center;
+    color: white;
+    font-family: 'Montserrat';
+    text-align: center;
     
     &__skew {
         -webkit-clip-path: polygon(0 0, 100% 0%, 100% 25%, 0 50%);
@@ -37,6 +45,21 @@
         height: 110vh;
         width: 100vw;
         background-color: #00CB79;
+    }
+
+    h1 {
+        
+        font-size: 36px;
+        font-weight: 500;
+        line-height: 44px;
+    }
+
+    p {
+        color: rgba(255, 255, 255, .75);
+        font-size: 15px;
+        font-weight: 300;
+        line-height: 19px;
+        width: 403px;
     }
 }
 
