--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -66,7 +66,7 @@ body {
 .card {
     background-color: white;
     min-height: 736px;
-    min-height: 934px;
+    max-height: 934px;
     width: 1240px;
     box-shadow: 0 4px 30px 0 rgba(0, 0, 0, .06);
     border-radius: 7px;
@@ -86,15 +86,35 @@ body {
 .input {
     display: grid;
     grid-template-columns: [number-s] 26px [number-e input-s] 1fr [input-e];
+    font-family: 'Montserrat';
+    text-align: center;
 
     &__title {
         grid-column: input-s/input-e;
+
+        border-top: 1px solid #b3b3b3;
+        color: #b3b3b3;
+        font-size: 12px;
+        font-weight: 300;
     }
     input{
         grid-column: input-s/input-e;
+        border: none;
+        font-size: 15px;
+        text-align: center;
     }
     &__number {
         grid-column: number-s/number-e;
+
+        background-color: #00CB79;
+        color: white;
+        font-size: 20px;
+        text-align: center;
+        line-height: 24px;
+        padding-top: 1px;
+
+        border-radius: 50%;
+        font-family: 'Montserrat';
     }
 }
 
