--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -75,8 +75,13 @@ body {
 
     &__inputs {
         display: grid;
-        grid-template-rows: repeat(4, 1fr);
+        grid-template-rows: repeat(4, 27px);
         grid-template-columns: repeat(4, 1fr);
+
+        grid-row-gap: 120px;
+        margin-top: 66px;
+        margin-left: 83px;
+        margin-right: 83px;
 
         justify-items: center;
         align-items: center;
@@ -88,11 +93,14 @@ body {
     grid-template-columns: [number-s] 26px [number-e input-s] 1fr [input-e];
     font-family: 'Montserrat';
     text-align: center;
+    grid-column-gap: 8px;
+
+    height: 47px;
 
     &__title {
         grid-column: input-s/input-e;
 
-        border-top: 1px solid #b3b3b3;
+        
         color: #b3b3b3;
         font-size: 12px;
         font-weight: 300;
@@ -102,6 +110,14 @@ body {
         border: none;
         font-size: 15px;
         text-align: center;
+        padding: 4px 0;
+        border-bottom: 1px solid #b3b3b3;
+        margin-bottom: 1px;
+        transition: all .3s ease;
+        &:focus {
+            outline: none;
+            border-bottom: 1px solid rgb(0, 255, 247);
+        }
     }
     &__number {
         grid-column: number-s/number-e;
@@ -112,9 +128,9 @@ body {
         text-align: center;
         line-height: 24px;
         padding-top: 1px;
-
+        height: 26px;
+        width: 26px;
         border-radius: 50%;
-        font-family: 'Montserrat';
     }
 }
 
