--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -104,6 +104,7 @@ body {
 
     button {
         justify-self: center;
+        transform: translateY(50%);
     }
 
     &__generate {
@@ -114,6 +115,23 @@ body {
     &__clear {
         background-color: #45B0E5;
         @include button;
+    }
+
+    &__content {
+        width: 1100px;
+        height: 297px;
+        background-color: #f2f2f2;
+
+        justify-self: center;
+        margin-bottom: 84px;
+        
+        p {
+            line-height: 29px;
+            padding: 50px 47px;
+            font-family: 'Montserrat';
+            font-size: 16px;
+            font-weight: 300;
+        }
     }
 }
 
@@ -162,8 +180,6 @@ body {
         border-radius: 50%;
     }
 }
-
-
 
 // html {
 //     font-size: 62.5%; // 1rem is 10px
