--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -9,6 +9,14 @@
     text-align: center;
 }
 
+.gray {
+    background: #b3b3b3;
+}
+
+.green {
+    background: #00CB79
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -169,7 +177,6 @@ body {
     &__number {
         grid-column: number-s/number-e;
 
-        background-color: #00CB79;
         color: white;
         font-size: 20px;
         text-align: center;
