--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -112,17 +112,18 @@ body {
 
     button {
         justify-self: center;
-        transform: translateY(50%);
     }
 
     &__generate {
         background-color: #00CB79;
+        transform: translateY(-270px);
         @include button;
     }
 
     &__clear {
         background-color: #45B0E5;
         @include button;
+        transform: translateY(50%);
     }
 
     &__content {
